提交3 边框的动态显示

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,12 @@
     <li>
       <a href="/001-button-text-staggered-sliding-effects/index.html">button切换</a>
     </li>
+    <li>
+      <a href="/002-rectangular-rotating/index.html">矩形旋转</a>
+    </li>
+    <li>
+      <a href="/003-border dynamics/index.html">线性变换实现背景</a>
+    </li>
   </ol>
 </body>
-
 </html>
