--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
     <li>
       <a href="/004-metallic-glossy-3d-button-effects/index.html">按钮3D金属光泽显示</a>
     </li>
+    <li>
+      <a href="/004-1-learn-3d/index.html">对3D效果的学习</a>
+    </li>
   </ol>
 </body>
 </html>
