--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
     <li>
       <a href="/004-1-learn-3d/index.html">对3D效果的学习</a>
     </li>
+    <li>
+        <a href="/005-sleek-sliding-toggle-checkbox/index.html">switch开关</a>
+      </li>
   </ol>
 </body>
 </html>
