007 3D文字跑马灯

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,11 @@
       <a href="/004-1-learn-3d/index.html">对3D效果的学习</a>
     </li>
     <li>
-        <a href="/005-sleek-sliding-toggle-checkbox/index.html">switch开关</a>
-      </li>
+      <a href="/005-sleek-sliding-toggle-checkbox/index.html">switch开关</a>
+    </li>
+    <li>
+      <a href="/007-3d-text-marquee-effects/index.html">3D文字跑马灯</a>
+    </li>
   </ol>
 </body>
 </html>
