008 动画版的充电装载机

--- a/src/008-charging-loader-animation/index.html
+++ b/src/008-charging-loader-animation/index.html
@@ -3,18 +3,11 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>demo7列表</title>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <title>demo8列表</title>
   <link href="index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div class="box">
-    <div class="inner">
-      <span>Hello World</span>
-    </div>
-    <div class="inner">
-      <span>Hello World</span>
-    </div>
+  <div class="battery">
   </div>
 </body>
 </html>
