--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,9 @@
     <li>
       <a href="/007-3d-text-marquee-effects/index.html">3D文字跑马灯</a>
     </li>
+    <li>
+      <a href="/008-charging-loader-animation/index.html">动画版的充电装载机</a>
+    </li>
   </ol>
 </body>
 </html>
