009 瞄准文字特效

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,9 @@
     <li>
       <a href="/008-charging-loader-animation/index.html">动画版的充电装载机</a>
     </li>
+    <li>
+      <a href="/009-aimed-button-effects/index.html">瞄准文字特效</a>
+    </li>
   </ol>
 </body>
 </html>
