010 同心弧旋转动画

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,9 @@
     <li>
       <a href="/009-aimed-button-effects/index.html">瞄准文字特效</a>
     </li>
+    <li>
+      <a href="/010-concentric-arc-rotating-loader-animation/index.html">同心弧旋转动画</a>
+    </li>
   </ol>
 </body>
 </html>
