011 纹波脉冲装载机动画

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,9 @@
     <li>
       <a href="/010-concentric-arc-rotating-loader-animation/index.html">同心弧旋转动画</a>
     </li>
+    <li>
+      <a href="/011-ripple-pulse-loader-animation/index.html">纹波脉冲装载机动画</a>
+    </li>
   </ol>
 </body>
 </html>
