012破碎的文字效果

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,15 @@
     <li>
       <a href="/011-ripple-pulse-loader-animation/index.html">纹波脉冲装载机动画</a>
     </li>
+    <li>
+      <a href="/012-broken-text-effects/index.html">破碎的文字效果</a>
+    </li>
+    <li>
+      <a href="/013-hot-coffee-cup/index.html">一杯热咖啡</a>
+    </li>
+    <li>
+      <a href="/015-development-skills-card/index.html">技能卡开发</a>
+    </li>
   </ol>
 </body>
 </html>
