016 多彩渐变的动画边框

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,9 @@
     <li>
       <a href="/015-development-skills-card/index.html">技能卡开发</a>
     </li>
+    <li>
+      <a href="/016-colorful-gradient-animated-border/index.html">多彩渐变的动画边框</a>
+    </li>
   </ol>
 </body>
 </html>
