017 多彩的正方形旋转

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,9 @@
     <li>
       <a href="/016-colorful-gradient-animated-border/index.html">多彩渐变的动画边框</a>
     </li>
+    <li>
+      <a href="/017-swapping-colors-loader-animation/index.html">多彩的正方形旋转</a>
+    </li>
   </ol>
 </body>
 </html>
