--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,9 @@
     <li>
       <a href="/017-swapping-colors-loader-animation/index.html">多彩的正方形旋转</a>
     </li>
+    <li>
+      <a href="/018-stroke-morphing-404-effects/index.html">变形的404</a>
+    </li>
   </ol>
 </body>
 </html>
