020 像素拼成的心形

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,12 @@
     <li>
       <a href="/018-stroke-morphing-404-effects/index.html">变形的404</a>
     </li>
+    <li>
+      <a href="/019-split-text-menu-effects/index.html">拆分文本的菜单效果</a>
+    </li>
+    <li>
+      <a href="/020-pixel-animation-heart-shape/index.html">像素拼成的心形</a>
+    </li>
   </ol>
 </body>
 </html>
