021 一个文字滑动效果

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,9 @@
     <li>
       <a href="/020-pixel-animation-heart-shape/index.html">像素拼成的心形</a>
     </li>
+    <li>
+      <a href="/021-a-text-sliding-effect-ui/index.html">一个文字滑动效果</a>
+    </li>
   </ol>
 </body>
 </html>
