025 彗星旋转装载机

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,15 @@
     <li>
       <a href="/021-a-text-sliding-effect-ui/index.html">一个文字滑动效果</a>
     </li>
+    <li>
+      <a href="/023-reverse-text-color-menu-effects/index.html">hover转换菜单文字颜色</a>
+    </li>
+    <li>
+      <a href="/024-waves/index.html">浪花</a>
+    </li>
+    <li>
+      <a href="/025-comet-rotating-loader/index.html">彗星旋转装载机</a>
+    </li>
   </ol>
 </body>
 </html>
