027 彩虹的动态加载

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,12 @@
     <li>
       <a href="/025-comet-rotating-loader/index.html">彗星旋转装载机</a>
     </li>
+    <li>
+      <a href="/026-set-off-paper-button-effects/index.html">Hover时纸张样式的menu</a>
+    </li>
+    <li>
+      <a href="/027-rainbow-loader/index.html">彩虹的动态加载</a>
+    </li>
   </ol>
 </body>
 </html>
