032 六角键效果

--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,24 @@
     <li>
       <a href="/027-rainbow-loader/index.html">彩虹的动态加载</a>
     </li>
+    <li>
+      <a href="/028-penrose-triangle/index.html">penrose三角</a>
+    </li>
+    <li>
+      <a href="/029-marquee-slash-animation/index.html">选取框斜线动画</a>
+    </li>
+    <li>
+      <a href="/030-swinging-signboard-effects/index.html">摆动的招牌</a>
+    </li>
+    <li>
+      <a href="/031-minimalist-ping-pong-animation/index.html">简约乒乓动画</a>
+    </li>
+    <li>
+      <a href="/032-hexagonal-button-effects/index.html">六角键效果</a>
+    </li>
+    <li>
+      <a href="/033-milk-text-effect/index.html">牛奶文字效果</a>
+    </li>
   </ol>
 </body>
 </html>
