045 多彩菱形装载机

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,45 @@
     <li>
       <a href="/033-milk-text-effect/index.html">牛奶文字效果</a>
     </li>
+    <li>
+      <a href="/034-box-border-stacking-effect/index.html">箱边界堆叠效果</a>
+    </li>
+    <li>
+      <a href="/035-panda/index.html">熊猫</a>
+    </li>
+    <li>
+      <a href="/035-radial-gradient/index.html">radial-gradient</a>
+    </li>
+    <li>
+      <a href="/036-solar-eclipse/index.html">日食</a>
+    </li>
+    <li>
+      <a href="/037-stroke-animation-button-effect/index.html">绚烂的菜单选择</a>
+    </li>
+    <li>
+      <a href="/038-stairs-lettering-effect/index.html">楼梯刻字效果</a>
+    </li>
+    <li>
+      <a href="/039-stripe-rainbow-heart/index.html">条纹彩虹心脏</a>
+    </li>
+    <li>
+      <a href="/040-notebook-page-flip-animation/index.html">笔记本翻页动画</a>
+    </li>
+    <li>
+      <a href="/041-pencil/index.html">铅笔</a>
+    </li>
+    <li>
+      <a href="/042-equalizer-loader/index.html">均衡器加载器</a>
+    </li>
+    <li>
+      <a href="/043-vue-logo/index.html">vue logo</a>
+    </li>
+    <li>
+      <a href="/044-background-transition-button-effect/index.html">背景过渡按钮效果</a>
+    </li>
+    <li>
+      <a href="/045-colorful-rhombus-loader/index.html">多彩菱形装载机</a>
+    </li>
   </ol>
 </body>
 </html>
