--- a/src/index.html
+++ b/src/index.html
@@ -141,6 +141,30 @@
     <li>
       <a href="/045-colorful-rhombus-loader/index.html">多彩菱形装载机</a>
     </li>
+    <li>
+      <a href="/053-text-fade-loader/index.html">文字褪色装载机</a>
+    </li>
+    <li>
+      <a href="/054-chessboard/index.html">棋盘</a>
+    </li>
+    <li>
+      <a href="/055-sun-earth-and-moon-model/index.html">太阳地球和月亮模型</a>
+    </li>
+    <li>
+      <a href="/056-a-programmers-life/index.html">程序员生活</a>
+    </li>
+    <li>
+      <a href="/057-eyes-in-the-dark/index.html">黑暗中的眼</a>
+    </li>
+    <li>
+      <a href="/058-parrot/index.html">鹦鹉</a>
+    </li>
+    <li>
+      <a href="/059-rainbow-background-text/index.html">彩虹背景的文本</a>
+    </li>
+    <li>
+      <a href="/060-lego-brick/index.html">乐高砖</a>
+    </li>
   </ol>
 </body>
 </html>
