--- a/src/index.html
+++ b/src/index.html
@@ -165,6 +165,12 @@
     <li>
       <a href="/060-lego-brick/index.html">乐高砖</a>
     </li>
+    <li>
+      <a href="/061-coffee-pot/index.html">咖啡壶</a>
+    </li>
+    <li>
+      <a href="/062-steamer/index.html">蒸笼</a>
+    </li>
   </ol>
 </body>
 </html>
