--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,19 @@
     <li>
       <a href="/062-steamer/index.html">蒸笼</a>
     </li>
+    <li>
+      <a href="/063-toaster/index.html">烤面包机</a>
+    </li>
+    <li>
+      <a href="/064-soccer-field/index.html">足球场</a>
+    </li>
+    <li>
+      <a href="/065-swaying-loader/index.html">摇曳装载机</a>
+    </li>
+    <li>
+      <a href="/066-coffee-machine/index.html">咖啡机</a>
+    </li>
   </ol>
 </body>
 </html>
+
