--- a/src/index.html
+++ b/src/index.html
@@ -183,6 +183,15 @@
     <li>
       <a href="/066-coffee-machine/index.html">咖啡机</a>
     </li>
+    <li>
+      <a href="/067-lattice-dots-loader/index.html">点阵</a>
+    </li>
+    <li>
+      <a href="/068-color-cards/index.html">色卡</a>
+    </li>
+    <li>
+      <a href="/069-throw-the-box/index.html">扔盒子</a>
+    </li>
   </ol>
 </body>
 </html>
