072 气泡着色按钮

--- a/src/index.html
+++ b/src/index.html
@@ -192,6 +192,18 @@
     <li>
       <a href="/069-throw-the-box/index.html">扔盒子</a>
     </li>
+    <li>
+      <a href="/070-wandered-jelly-monster/index.html">徘徊果冻怪物</a>
+    </li>
+    <li>
+      <a href="/071-8-shaped-dancing-loader/index.html">8形舞装载机</a>
+    </li>
+    <li>
+      <a href="/072-bubble-coloring-button/index.html">气泡着色按钮</a>
+    </li>
+    <li>
+      <a href="/073-fox/index.html">狐狸</a>
+    </li>
   </ol>
 </body>
 </html>
