--- a/src/index.html
+++ b/src/index.html
@@ -204,6 +204,12 @@
     <li>
       <a href="/073-fox/index.html">狐狸</a>
     </li>
+    <li>
+      <a href="/074-macbook-pro/index.html">macbook pro</a>
+    </li>
+    <li>
+      <a href="/075-candle/index.html">蜡烛</a>
+    </li>
   </ol>
 </body>
 </html>
