--- a/src/index.html
+++ b/src/index.html
@@ -210,6 +210,18 @@
     <li>
       <a href="/075-candle/index.html">蜡烛</a>
     </li>
+    <li>
+      <a href="/076-hey-take-it-easy/index.html">简单的桌子</a>
+    </li>
+    <li>
+      <a href="/077-wavy-flag/index.html">波浪标志</a>
+    </li>
+    <li>
+      <a href="/078-windows-boot-screen/index.html">Windows的启动画面</a>
+    </li>
+    <li>
+      <a href="/079-mcdonalds/index.html">麦当劳</a>
+    </li>
   </ol>
 </body>
 </html>
