--- a/src/index.html
+++ b/src/index.html
@@ -222,6 +222,27 @@
     <li>
       <a href="/079-mcdonalds/index.html">麦当劳</a>
     </li>
+    <li>
+      <a href="/080-bicycle-wheel/index.html">车轮子</a>
+    </li>
+    <li>
+      <a href="/081-swapping-colors-rotating-animation/index.html">交换-颜色旋转动画</a>
+    </li>
+    <li>
+      <a href="/082-bouncing-letter-i/index.html">弹跳字母I</a>
+    </li>
+    <li>
+      <a href="/083-a-ball-climbing-the-stairs/index.html">球爬楼梯</a>
+    </li>
+    <li>
+      <a href="/084-need-for-speed-loader/index.html">加载loading</a>
+    </li>
+    <li>
+      <a href="/085-bouncing-ball/index.html">弹跳球</a>
+    </li>
+    <li>
+      <a href="/086-rotating-squares/index.html">旋转方块</a>
+    </li>
   </ol>
 </body>
 </html>
