--- a/src/index.html
+++ b/src/index.html
@@ -243,6 +243,36 @@
     <li>
       <a href="/086-rotating-squares/index.html">旋转方块</a>
     </li>
+    <li>
+      <a href="/087-refrigerator/index.html">冰箱</a>
+    </li>
+    <li>
+      <a href="/088-burning-flame/index.html">燃烧火焰</a>
+    </li>
+    <li>
+      <a href="/089-spiral-arms-particles-animation/index.html">螺旋颗粒动画</a>
+    </li>
+    <li>
+      <a href="/090-endless-hexagonal-space/index.html">无尽的六方空间</a>
+    </li>
+    <li>
+      <a href="/091-train-loader/index.html">列车装载机</a>
+    </li>
+    <li>
+      <a href="/092-saturn/index.html">土星</a>
+    </li>
+    <li>
+      <a href="/093-lightning-cable/index.html">充电线</a>
+    </li>
+    <li>
+      <a href="/094-polaroid-camera/index.html">拍立得</a>
+    </li>
+    <li>
+      <a href="/097-swagger-dots/index.html">移动的点</a>
+    </li>
+    <li>
+      <a href="/098-pig-in-angry-birds/index.html">奋斗的小鸟</a>
+    </li>
   </ol>
 </body>
 </html>
